[gd_scene load_steps=10 format=3 uid="uid://usn8pirw8kjc"]

[ext_resource type="Material" uid="uid://bk3wcarpqpgmi" path="res://codings/Shaders/Pixelart.tres" id="1_blols"]
[ext_resource type="Script" path="res://codings/wandering_enemy.gd" id="2_2fny2"]
[ext_resource type="Resource" uid="uid://dv24x1ivfytn7" path="res://database/BattleSeq/SludgeBattle4.tres" id="3_ku8yi"]
[ext_resource type="SpriteFrames" uid="uid://cgnsvgqdju2dh" path="res://art/Effects/Bubble.tres" id="4_iawkj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7bu4m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s7t5g"]
radius = 34.0005
height = 86.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o5d30"]
radius = 15.0

[sub_resource type="Gradient" id="Gradient_4pn5g"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v3lgp"]
gradient = SubResource("Gradient_4pn5g")
fill = 1
fill_from = Vector2(0.491453, 0.504274)
fill_to = Vector2(0.141026, 0.884615)

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
material = ExtResource("1_blols")
collision_layer = 513
collision_mask = 513
motion_mode = 1
script = ExtResource("2_2fny2")
Battle = ExtResource("3_ku8yi")
speed = 20
ID = "CS2"
SpawnOnCameraInd = true
CameraIndex = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7bu4m")

[node name="DirectionMarker" type="Marker2D" parent="."]

[node name="Finder" type="Area2D" parent="DirectionMarker"]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionMarker/Finder"]
position = Vector2(39.0013, 0.990601)
rotation = 1.57007
shape = SubResource("CapsuleShape2D_s7t5g")
debug_color = Color(0.721569, 0.415686, 0.635294, 0.419608)

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 767
collision_mask = 767

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
position = Vector2(0, 4.76837e-07)
rotation = 1.57007
shape = SubResource("CircleShape2D_o5d30")
debug_color = Color(0.235294, 0.631373, 0.317647, 0.419608)

[node name="Bubble" type="AnimatedSprite2D" parent="."]
process_mode = 3
light_mask = 0
z_index = 3
material = ExtResource("1_blols")
position = Vector2(-0.00183105, -13.0005)
sprite_frames = ExtResource("4_iawkj")
animation = &"Ellipsis"

[node name="Nav" type="NavigationAgent2D" parent="."]
target_desired_distance = 1.0
navigation_layers = 2

[node name="Flash" type="PointLight2D" parent="."]
position = Vector2(0, 3.8147e-06)
scale = Vector2(2.70313, 2.70313)
energy = 0.0
texture = SubResource("GradientTexture2D_v3lgp")

[connection signal="body_entered" from="DirectionMarker/Finder" to="." method="_on_finder_body_entered"]
[connection signal="area_entered" from="CatchArea" to="." method="_on_catch_area_area_entered"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_catch_area_body_entered"]
